--- a/src/app/pages/macroCiclo/macroCiclo.component.html
+++ b/src/app/pages/macroCiclo/macroCiclo.component.html
@@ -89,11 +89,11 @@
             <dxi-column dataField="fin" caption="Fin" dataType="date" format="dd/MM/yyyy" [allowFiltering]="false" [width]="130"></dxi-column>
             <dxi-column dataField="dias" caption="Días" [allowFiltering]="false" [width]="70" ></dxi-column>
            
-            <dxi-column caption="Total">
-                <dxi-column dataField="viajes" caption="Viajes" [allowFiltering]="false" [width]="100"></dxi-column>
-                <dxi-column dataField="kms" caption="Kilometros" [format]="separator" [allowFiltering]="false" [width]="120"></dxi-column>
+            <dxi-column caption="Viajes Totales">
+                <dxi-column dataField="viajes" caption="Cantidad" [allowFiltering]="false" [width]="100"></dxi-column>
+                <dxi-column dataField="kms" caption="Kms" [format]="separator" [allowFiltering]="false" [width]="120"></dxi-column>
                 <dxi-column dataField="flete" caption="Ingreso por Flete" [format]="separatorPesos" [allowFiltering]="false" [width]="160"></dxi-column>
-                <dxi-column dataField="ingrXKm" caption="Ingreso por Kilometro" [format]="redondear" [allowFiltering]="false" [width]="180"></dxi-column>
+                <dxi-column dataField="ingrXKm" caption="Ingreso por Kilómetros" [format]="redondear" [allowFiltering]="false" [width]="180"></dxi-column>
             </dxi-column>
             <dxi-column dataField="" caption="Detalle" [fixed]="false" cellTemplate="detalleCellTemplate" [width]="100"></dxi-column>
 
@@ -138,22 +138,29 @@
                 <dxi-column dataField="operacion" caption="Operación" [fixed]="true" [width]="140"></dxi-column>
                 <dxi-column dataField="noViaje" caption="No. Viaje" [fixed]="true" [width]="100"></dxi-column>
                 <dxi-column dataField="tipoViaje" caption="Tipo de Viaje" [fixed]="true" [width]="150"></dxi-column>
-                
                 <dxi-column dataField="ruta" caption="Ruta" [width]="250"></dxi-column>
                 <dxi-column dataField="cliente" caption="Cliente" [width]="180"></dxi-column>
-                <dxi-column dataField="origen" caption="Origen" [width]="180"></dxi-column>
-                <dxi-column dataField="municipioOrigen" caption="Municipio Origen" [width]="130"></dxi-column>
-                <dxi-column dataField="edoOrigen" caption="Edo. Origen" [width]="130"></dxi-column>
-                <dxi-column dataField="destino" caption="Destino" [width]="180"></dxi-column>
-                <dxi-column dataField="municipioDestino" caption="Municipio Destino" [width]="130"></dxi-column>
-                <dxi-column dataField="edoDestino" caption="Edo. Destino" [width]="130"></dxi-column>
-                <dxi-column dataField="inicio" caption="Fecha inicio" dataType="date" format="dd/MM/yyyy" [width]="150"></dxi-column>
-                <dxi-column dataField="fin" caption="Fecha fin" dataType="date" format="dd/MM/yyyy" [width]="150"></dxi-column>
-                <dxi-column dataField="kms" caption="Kilometros" [format]="separator" [width]="100"></dxi-column>
-                <dxi-column dataField="flete" caption="Flete" format="$ #,###,###.##;-$ #,##0.##" [width]="100"></dxi-column>
-                <dxi-column dataField="ingrXKm" caption="Ingreso Kilometro" format="$ #,###,###.##;-$ #,##0.##" [width]="150"></dxi-column>
-                <dxi-column dataField="kmsAcumulado" caption="Kms. Acumulado" [format]="separator" [width]="130"></dxi-column>
-                <dxi-column dataField="fleteAcumulado" caption="Flete acumulado" format="$ #,###,###.##;-$ #,##0.##" [width]="150"></dxi-column>
+                <dxi-column caption="Origen">
+                    <dxi-column dataField="origen" caption="Origen" [width]="180"></dxi-column>
+                    <dxi-column dataField="municipioOrigen" caption="Municipio" [width]="130"></dxi-column>
+                    <dxi-column dataField="edoOrigen" caption="Estado" [width]="130"></dxi-column>
+                </dxi-column>
+                <dxi-column caption="Destino">
+                    <dxi-column dataField="destino" caption="Destino" [width]="180"></dxi-column>
+                    <dxi-column dataField="municipioDestino" caption="Municipio" [width]="130"></dxi-column>
+                    <dxi-column dataField="edoDestino" caption="Estado" [width]="130"></dxi-column>
+                </dxi-column>
+                <dxi-column dataField="inicio" caption="Inicio" dataType="date" format="dd/MM/yyyy" [width]="150"></dxi-column>
+                <dxi-column dataField="fin" caption="Fin" dataType="date" format="dd/MM/yyyy" [width]="150"></dxi-column>
+                <dxi-column caption="Por Viaje">
+                    <dxi-column dataField="kms" caption="Kms" [format]="separator" [width]="100"></dxi-column>
+                    <dxi-column dataField="flete" caption="Ingreso por Flete" format="$ #,###,###.##;-$ #,##0.##" [width]="150"></dxi-column>
+                    <dxi-column dataField="ingrXKm" caption="Ingreso Kilometro" format="$ #,###,###.##;-$ #,##0.##" [width]="150"></dxi-column>
+                </dxi-column>
+                <dxi-column caption="Acumulado">
+                    <dxi-column dataField="kmsAcumulado" caption="Kms. Acumulado" [format]="separator" [width]="130"></dxi-column>
+                    <dxi-column dataField="fleteAcumulado" caption="Flete acumulado" format="$ #,###,###.##;-$ #,##0.##" [width]="150"></dxi-column>
+                </dxi-column>
                 <dxi-column dataField="ingrXKmAcumulado" caption="Ingr. kms. Acumulado" format="$ #,###,###.##;-$ #,##0.##" [width]="150"></dxi-column>
 
                 <!-- <dxi-column dataField="ciclo" caption="Ciclo" [width]="100"></dxi-column>
