--- a/src/app/pages/macroCiclo/macroCiclo.component.html
+++ b/src/app/pages/macroCiclo/macroCiclo.component.html
@@ -93,7 +93,7 @@
                 <dxi-column dataField="viajes" caption="Cantidad" [allowFiltering]="false" [width]="100"></dxi-column>
                 <dxi-column dataField="kms" caption="Kms" [format]="separator" [allowFiltering]="false" [width]="120"></dxi-column>
                 <dxi-column dataField="flete" caption="Ingreso por Flete" [format]="separatorPesos" [allowFiltering]="false" [width]="160"></dxi-column>
-                <dxi-column dataField="ingrXKm" caption="Ingreso por Kilómetros" [format]="redondear" [allowFiltering]="false" [width]="180"></dxi-column>
+                <dxi-column dataField="ingrXKm" caption="Ingreso por Kilómetro" [format]="redondear" [allowFiltering]="false" [width]="180"></dxi-column>
             </dxi-column>
             <dxi-column dataField="" caption="Detalle" [fixed]="false" cellTemplate="detalleCellTemplate" [width]="100"></dxi-column>
 
