--- a/src/app/pages/macroCiclo/macroCiclo.component.html
+++ b/src/app/pages/macroCiclo/macroCiclo.component.html
@@ -157,11 +157,12 @@
                     <dxi-column dataField="flete" caption="Ingreso por Flete" format="$ #,###,###.##;-$ #,##0.##" [width]="150"></dxi-column>
                     <dxi-column dataField="ingrXKm" caption="Ingreso Kilometro" format="$ #,###,###.##;-$ #,##0.##" [width]="150"></dxi-column>
                 </dxi-column>
-                <dxi-column caption="Acumulado">
-                    <dxi-column dataField="kmsAcumulado" caption="Kms. Acumulado" [format]="separator" [width]="130"></dxi-column>
+                <dxi-column caption="Por Viajes Acumulados">
+                    <dxi-column dataField="kmsAcumulado" caption="Kms. Acumulado" [format]="separator" [width]="150"></dxi-column>
                     <dxi-column dataField="fleteAcumulado" caption="Flete acumulado" format="$ #,###,###.##;-$ #,##0.##" [width]="150"></dxi-column>
+                    <dxi-column dataField="ingrXKmAcumulado" caption="Ingr. kms. Acumulado" format="$ #,###,###.##;-$ #,##0.##" [width]="170"></dxi-column>
                 </dxi-column>
-                <dxi-column dataField="ingrXKmAcumulado" caption="Ingr. kms. Acumulado" format="$ #,###,###.##;-$ #,##0.##" [width]="150"></dxi-column>
+
 
                 <!-- <dxi-column dataField="ciclo" caption="Ciclo" [width]="100"></dxi-column>
                 <dxi-column dataField="cicloCliente" caption="Ciclo cliente" [width]="140"></dxi-column>
