actualizacion rutas macro

--- a/src/app/pages/macroCiclo/macroCiclo.component.html
+++ b/src/app/pages/macroCiclo/macroCiclo.component.html
@@ -140,11 +140,11 @@
         <dxi-item title="Ingreso X Km Rutas">
             <br><br>
             <dx-responsive-box>
-                <dxi-col [ratio]=".40"></dxi-col>
-                <dxi-col [ratio]="1.5"></dxi-col>
-                <dxi-col [ratio]=".60"></dxi-col>
+                <dxi-col [ratio]=".49"></dxi-col>
+                <dxi-col [ratio]="1.8"></dxi-col>
+                <dxi-col [ratio]=".52"></dxi-col>
                 <dxi-col [ratio]=".70"></dxi-col>
-                <dxi-col [ratio]="1.5"></dxi-col>
+                <dxi-col [ratio]="1.8"></dxi-col>
                 <dxi-col [ratio]=".15"></dxi-col>
                 <dxi-col [ratio]="2"></dxi-col>
 
@@ -200,7 +200,7 @@
             </dx-responsive-box>
             <br>
             <dx-responsive-box>
-                <dxi-col [ratio]=".10"></dxi-col>
+                <dxi-col [ratio]=".07"></dxi-col>
                 <dxi-col [ratio]=".80"></dxi-col>
 
 
@@ -225,7 +225,7 @@
             </dx-responsive-box>
             <br>
             <dx-responsive-box>
-                <dxi-col [ratio]=".10"></dxi-col>
+                <dxi-col [ratio]=".11"></dxi-col>
                 <dxi-col [ratio]=".40"></dxi-col>
                 <dxi-col [ratio]=".10"></dxi-col>
                 <dxi-col [ratio]=".15"></dxi-col>
@@ -281,7 +281,7 @@
             </dx-responsive-box>
             <br><br>
 
-            <dx-data-grid class="data-grid" [dataSource]="detalleMacro" [showColumnLines]="true" [rowAlternationEnabled]="true" [columnAutoWidth]="true"
+            <dx-data-grid class="data-grid" [dataSource]="rutas" [showColumnLines]="true" [rowAlternationEnabled]="true" [columnAutoWidth]="true"
              [allowColumnResizing]="true" [allowColumnReordering]="false" [columnAutoWidth]="true" [showBorders]="true">
 
                 <dxo-search-panel [visible]="true" [width]="240" placeholder="Buscar..."></dxo-search-panel>
