--- a/src/app/pages/macroCiclo/macroCiclo.component.html
+++ b/src/app/pages/macroCiclo/macroCiclo.component.html
@@ -200,7 +200,7 @@
             </dx-responsive-box>
             <br>
             <dx-responsive-box>
-                <dxi-col [ratio]=".07"></dxi-col>
+                <dxi-col [ratio]=".066"></dxi-col>
                 <dxi-col [ratio]=".80"></dxi-col>
 
 
@@ -218,7 +218,7 @@
                 <dxi-item *ngIf="rutaOrigen.length !== 0">
                     <dxi-location screen="md lg" [row]="0" [col]="1"></dxi-location>
                     <dxi-location style="margin-top: 0.5rem" screen="xs sm" [row]="11" [col]="0" [colspan]="12"></dxi-location>
-                    <dx-select-box [items]="rutaClientes" displayExpr="nombre" valueExpr="nombre"  (onValueChanged)="selectClientes($event)">
+                    <dx-select-box [items]="rutaClientes" displayExpr="nombre" valueExpr="nombre" id="selectClientes" (onValueChanged)="selectClientes($event)">
                     </dx-select-box>
                 </dxi-item>
 
@@ -226,7 +226,7 @@
             <br>
             <dx-responsive-box>
                 <dxi-col [ratio]=".11"></dxi-col>
-                <dxi-col [ratio]=".40"></dxi-col>
+                <dxi-col [ratio]=".45"></dxi-col>
                 <dxi-col [ratio]=".10"></dxi-col>
                 <dxi-col [ratio]=".15"></dxi-col>
                 <dxi-col [ratio]=".40"></dxi-col>
@@ -250,7 +250,7 @@
                 <dxi-item *ngIf="rutaOrigen.length !== 0">
                     <dxi-location screen="md lg" [row]="0" [col]="1"></dxi-location>
                     <dxi-location style="margin-top: 0.5rem" screen="xs sm" [row]="11" [col]="0" [colspan]="12"></dxi-location>
-                    <dx-select-box [items]="rutaOrigen" displayExpr="nombre" valueExpr="nombre"  (onValueChanged)="selectRutaOri($event)">
+                    <dx-select-box [items]="rutaOrigen" displayExpr="nombre" valueExpr="nombre" id="selectOrigen" (onValueChanged)="selectRutaOri($event)">
                     </dx-select-box>
                 </dxi-item>
 
@@ -263,7 +263,7 @@
                 <dxi-item *ngIf="rutaOrigen.length !== 0">
                     <dxi-location screen="md lg" [row]="0" [col]="4"></dxi-location>
                     <dxi-location style="margin-top: 0.5rem" screen="xs sm" [row]="11" [col]="0" [colspan]="12"></dxi-location>
-                    <dx-select-box [items]="rutaDestino" displayExpr="nombre" valueExpr="nombre"  (onValueChanged)="selectRutaDestino($event)">
+                    <dx-select-box [items]="rutaDestino" displayExpr="nombre" valueExpr="nombre" id="selectDestino"  (onValueChanged)="selectRutaDestino($event)">
                     </dx-select-box>
                 </dxi-item>
 
@@ -279,6 +279,28 @@
                 </dxi-item>
 
             </dx-responsive-box>
+            <br><br>
+            <dx-responsive-box>
+                <dxi-col [ratio]="1"></dxi-col>
+                <dxi-col [ratio]="2"></dxi-col>
+
+
+
+                <dxi-row [ratio]="1"></dxi-row>
+                <dxi-row [ratio]="1"></dxi-row>
+        
+
+                <dxi-item>
+                    <dxi-location screen="md lg" [row]="0" [col]="1"></dxi-location>
+                    <dxi-location style="margin-top: .20rem" screen="xs sm" [row]="12" [col]="0" [colspan]="12"></dxi-location>
+                    <div>
+                        <dx-button *ngIf="rutaOrigen.length !== 0" stylingMode="contained" text="Limpiar" type="danger" [width]="120" (onClick)="limpiar()">
+                        </dx-button>
+                    </div>
+                </dxi-item>
+
+            </dx-responsive-box>
+            
             <br><br>
 
             <dx-data-grid class="data-grid" [dataSource]="rutas" [showColumnLines]="true" [rowAlternationEnabled]="true" [columnAutoWidth]="true"
